--- a/frontend/src/app/features/feed/feed-page/feed-page.component.html
+++ b/frontend/src/app/features/feed/feed-page/feed-page.component.html
@@ -7,17 +7,20 @@
     <div class="column-middle">
       <app-feed-control-bar></app-feed-control-bar>
 
-      <div id="placeholder-posts-container">
-        <!--<c:forEach begin="1" end="10" var="index">
-              <%@ include file="/WEB-INF/jsp/components/widgets/placeholderBlogpost.jsp" %>
-            </c:forEach>-->
+      <!-- Placeholder Posts While Loading -->
+      <div id="placeholder-posts-container" *ngIf="loading">
+        <ng-container *ngFor="let _ of placeholderArray">
+          <div class="mb-3">
+            <app-placeholder-post></app-placeholder-post>
+          </div>
+        </ng-container>
       </div>
-      <div id="actual-posts-container">
+
+      <!-- Actual Posts -->
+      <div id="actual-posts-container" *ngIf="!loading">
         <ng-container
           *ngIf="postList && postList.length > 0; else noPostsFound"
         >
-          <!-- Include the page selector -->
-
           <div *ngFor="let post of postList">
             <app-feed-post-preview [post]="post"></app-feed-post-preview>
           </div>
@@ -29,6 +32,7 @@
             (pageChange)="onPageChange($event)"
           ></app-paginator>
         </ng-container>
+
         <ng-template #noPostsFound>
           <div class="no-posts-found">
             <i class="circle-icon fa-solid fa-magnifying-glass"></i>
@@ -36,21 +40,10 @@
           </div>
         </ng-template>
       </div>
-      <script>
-        function showPostsAfterDelay() {
-          document.getElementById("placeholder-posts-container").style.display =
-            "none";
-          document.getElementById("actual-posts-container").style.display =
-            "block";
-        }
-
-        setTimeout(showPostsAfterDelay, 300);
-      </script>
     </div>
 
     <div class="column-right">
       <app-right-column></app-right-column>
-      <!--<%@ include file="/WEB-INF/jsp/components/displays/rightColumn.jsp" %>-->
     </div>
   </div>
 </div>
