--- a/frontend/src/app/shared/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/components/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
           [ngClass]="{ active: channelClass === 'Profile' }"
         >
           <i class="fa-solid fa-address-card"></i>
-          <span>{{ "SIDEBAR.CHANNELS.WORKER-PROFILE" | translate }}</span>
+          <span>{{ 'SIDEBAR.CHANNELS.WORKER-PROFILE' | translate }}</span>
         </a>
         <a
           id="workerServicesButton"
@@ -22,7 +22,7 @@
           [ngClass]="{ active: channelClass === 'Services' }"
         >
           <i class="fa-solid fa-handshake-angle"></i>
-          <span>{{ "SIDEBAR.CHANNELS.WORKER-SERVICES" | translate }}</span>
+          <span>{{ 'SIDEBAR.CHANNELS.WORKER-SERVICES' | translate }}</span>
         </a>
         <a
           id="neighborhoodsButton"
@@ -31,7 +31,7 @@
           [ngClass]="{ active: channelClass === 'Neighborhoods' }"
         >
           <i class="fa-solid fa-house"></i>
-          <span>{{ "SIDEBAR.CHANNELS.WORKER-NEIGHBORHOODS" | translate }}</span>
+          <span>{{ 'SIDEBAR.CHANNELS.WORKER-NEIGHBORHOODS' | translate }}</span>
         </a>
       </div>
     </div>
@@ -39,15 +39,20 @@
     <!-- Non-Worker Sidebar -->
     <ng-template #notWorker>
       <div class="left-box">
-        <div class="f-c-c-c first">
-          <a
-            *ngIf="userRole === Roles.ADMINISTRATOR"
-            [routerLink]="['/admin/announcement/new']"
-            class="cool-left-button admin-button f-r-sb-c"
-          >
-            <i class="fa-solid fa-chart-pie"></i>
-            <span>{{ "SIDEBAR.CHANNELS.ADMINISTRATOR" | translate }}</span>
-          </a>
+        <div class="f-c-c-c g-1 first">
+          <div *ngIf="userRole === Roles.ADMINISTRATOR">
+            <a
+              [routerLink]="['/admin/announcement/new']"
+              class="cool-left-button admin-button leave f-r-sb-c"
+            >
+              <i class="fa-solid fa-chart-pie"></i>
+              <span class="text-end">{{
+                'SIDEBAR.CHANNELS.ADMINISTRATOR' | translate
+              }}</span>
+            </a>
+            <div class="divider"></div>
+          </div>
+
           <a
             id="announcementsButton"
             (click)="changeChannelToAnnouncements()"
@@ -55,7 +60,7 @@
             [ngClass]="{ active: channelClass === 'Announcements' }"
           >
             <i class="fas fa-bullhorn"></i>
-            <span>{{ "SIDEBAR.CHANNELS.ANNOUNCEMENTS" | translate }}</span>
+            <span>{{ 'SIDEBAR.CHANNELS.ANNOUNCEMENTS' | translate }}</span>
           </a>
           <a
             id="feedButton"
@@ -64,7 +69,7 @@
             [ngClass]="{ active: channelClass === 'Feed' }"
           >
             <i class="fas fa-comments"></i>
-            <span>{{ "SIDEBAR.CHANNELS.FEED" | translate }}</span>
+            <span>{{ 'SIDEBAR.CHANNELS.FEED' | translate }}</span>
           </a>
           <a
             id="complaintsButton"
@@ -73,7 +78,7 @@
             [ngClass]="{ active: channelClass === 'Complaints' }"
           >
             <i class="fas fa-envelope"></i>
-            <span>{{ "SIDEBAR.CHANNELS.COMPLAINTS" | translate }}</span>
+            <span>{{ 'SIDEBAR.CHANNELS.COMPLAINTS' | translate }}</span>
           </a>
         </div>
         <div class="f-c-c-c second">
@@ -85,7 +90,7 @@
             [ngClass]="{ active: channelClass === 'Marketplace' }"
           >
             <i class="fa-solid fa-store"></i>
-            <span>{{ "SIDEBAR.CHANNELS.MARKETPLACE" | translate }}</span>
+            <span>{{ 'SIDEBAR.CHANNELS.MARKETPLACE' | translate }}</span>
           </a>
           <a
             id="servicesButton"
@@ -94,7 +99,7 @@
             [ngClass]="{ active: channelClass === 'Services' }"
           >
             <i class="fa-solid fa-handshake-angle"></i>
-            <span>{{ "SIDEBAR.CHANNELS.SERVICES" | translate }}</span>
+            <span>{{ 'SIDEBAR.CHANNELS.SERVICES' | translate }}</span>
           </a>
           <a
             id="reservationsButton"
@@ -103,7 +108,7 @@
             [ngClass]="{ active: channelClass === 'Reservations' }"
           >
             <i class="fas fa-calendar-days"></i>
-            <span>{{ "SIDEBAR.CHANNELS.AMENITIES" | translate }}</span>
+            <span>{{ 'SIDEBAR.CHANNELS.AMENITIES' | translate }}</span>
           </a>
           <a
             id="informationButton"
@@ -112,7 +117,7 @@
             [ngClass]="{ active: channelClass === 'Information' }"
           >
             <i class="fa-solid fa-circle-info"></i>
-            <span>{{ "SIDEBAR.CHANNELS.INFORMATION" | translate }}</span>
+            <span>{{ 'SIDEBAR.CHANNELS.INFORMATION' | translate }}</span>
           </a>
         </div>
       </div>
