--- a/frontend/src/assets/styles/home.css
+++ b/frontend/src/assets/styles/home.css
@@ -390,7 +390,7 @@
     transform: translateY(0);
 
     &::before {
-      content: "";
+      content: '';
       position: absolute;
       width: 100%;
       height: 110%;
@@ -411,7 +411,7 @@
     }
 
     &:before {
-      content: "";
+      content: '';
       position: absolute;
       width: 100px;
       height: 120%;
@@ -553,7 +553,7 @@
   /* Set the line height to match your text */
 
   &::after {
-    content: "";
+    content: '';
     position: absolute;
     bottom: 0;
     left: 0;
@@ -854,8 +854,9 @@
       &.active {
         box-shadow: 0 var(--admin);
         transform: translateY(0px);
+        background-color: var(--darkonbackground);
         color: var(--admin);
-        background-color: var(--onbackground);
+        background-color: #96969610;
         border: 0 solid var(--admin);
       }
     }
@@ -930,7 +931,7 @@
   transform: translateY(0);
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     width: 100%;
     height: 110%;
@@ -986,7 +987,7 @@
   transform: translateY(0);
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     width: 100%;
     height: 110%;
@@ -1175,7 +1176,7 @@
     transform: translateY(0);
 
     &::before {
-      content: "";
+      content: '';
       position: absolute;
       width: 100%;
       height: 110%;
@@ -1263,7 +1264,7 @@
   transition: color 0.2s ease-in-out;
 }
 
-input[type="file"] {
+input[type='file'] {
   width: 350px;
   max-width: 100%;
   color: var(--text);
@@ -1285,7 +1286,7 @@ input[type="file"] {
   }
 }
 
-input[type="file"]::file-selector-button:hover {
+input[type='file']::file-selector-button:hover {
   &.services {
     background: var(--profession);
   }
@@ -1335,7 +1336,7 @@ input[type="file"]::file-selector-button:hover {
     --loader-color: var(--lila);
 
     &::before {
-      content: "";
+      content: '';
       position: absolute;
       background: var(--lila);
       top: 0;
@@ -1354,7 +1355,7 @@ input[type="file"]::file-selector-button:hover {
   position: relative;
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     background: var(--primary);
     top: 0;
@@ -1393,7 +1394,7 @@ input[type="file"]::file-selector-button:hover {
   transform: translateY(0);
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     width: 100%;
     height: 110%;
@@ -1545,7 +1546,7 @@ app-navbar {
     transform: translateY(0);
 
     &::before {
-      content: "";
+      content: '';
       position: absolute;
       width: 100%;
       height: 110%;
@@ -1589,7 +1590,7 @@ app-navbar {
   transform: translateY(0);
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     width: 100%;
     height: 110%;
@@ -1649,7 +1650,7 @@ app-navbar {
   transform: translateY(0);
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     width: 100%;
     height: 110%;
@@ -1917,7 +1918,7 @@ app-navbar {
   transform: translateY(0);
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     width: 100%;
     height: 110%;
@@ -1980,7 +1981,7 @@ app-navbar {
   transform: translateY(0);
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     width: 100%;
     height: 110%;
@@ -2252,7 +2253,7 @@ h6 {
   &:before {
     box-sizing: border-box;
     position: absolute;
-    content: "";
+    content: '';
     height: 20px;
     width: 20px;
     border: 1px solid var(--main-color);
@@ -2279,7 +2280,7 @@ h6 {
   transform: translateY(0);
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     width: 100%;
     height: 110%;
@@ -2531,7 +2532,7 @@ h6 {
 }
 
 /*TIME----------------------------------*/
-input[type="time"] {
+input[type='time'] {
   position: relative;
   padding: 10px;
   height: 1.5em;
@@ -2547,7 +2548,7 @@ input[type="time"] {
   transform: translateY(0);
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     width: 100%;
     height: 110%;
@@ -2600,7 +2601,7 @@ input[type="time"] {
       transform: translateY(0);
 
       &::before {
-        content: "";
+        content: '';
         position: absolute;
         width: 100%;
         height: 110%;
@@ -2743,7 +2744,6 @@ input[type="time"] {
   padding: 0;
   height: 300px;
   background-color: var(--onbackground);
-  border: 1px solid var(--lightertext);
   border-radius: var(--border-radius);
   transition: all 0.3s ease-in-out;
   overflow: hidden;
@@ -2754,7 +2754,6 @@ input[type="time"] {
     cursor: pointer;
     transform: translateY(-5px);
     box-shadow: 0 5px 0 0 var(--lila);
-    border: 1px solid var(--lila);
   }
 
   & .header {
@@ -3074,7 +3073,7 @@ input[type="time"] {
 }
 
 .upload__img-close:after {
-  content: "\2716";
+  content: '\2716';
   font-size: 14px;
   color: var(--always-background);
 }
