--- a/frontend/src/assets/styles/calendarBox.css
+++ b/frontend/src/assets/styles/calendarBox.css
@@ -8,7 +8,7 @@
   width: 100%;
   background-color: var(--onbackground);
   color: var(--primary);
-  border: 1px solid var(--shadow);
+  border: 1px solid var(--bordercolor);
   border-radius: var(--border-radius);
   transform: translateY(-4px);
   box-shadow: -3px 5px 0 0 var(--lighttext);
@@ -100,7 +100,7 @@
 
         &::before {
           position: absolute;
-          content: "";
+          content: '';
           left: 50%;
           top: 50%;
           height: 35px;
@@ -129,7 +129,7 @@
           &::before {
             position: absolute;
             cursor: pointer;
-            content: "";
+            content: '';
             left: 50%;
             top: 50%;
             height: 35px;
@@ -152,7 +152,7 @@
 
           &::before {
             position: absolute;
-            content: "";
+            content: '';
             left: 50%;
             top: 50%;
             height: 35px;
@@ -175,7 +175,7 @@
 
           &::before {
             position: absolute;
-            content: "";
+            content: '';
             left: 50%;
             top: 50%;
             height: 35px;
