--- a/frontend/src/assets/styles/home.css
+++ b/frontend/src/assets/styles/home.css
@@ -182,7 +182,7 @@
   padding: 0.7em 1em;
   background-color: var(--onbackground);
   color: var(--text);
-  border: 1px solid var(--shadow);
+  border: 1px solid var(--bordercolor);
   border-radius: var(--border-radius);
   position: relative;
   transform: translateY(0);
@@ -203,7 +203,7 @@
   &.comment-button {
     color: var(--text);
     background-color: var(--onbackground);
-    border: 1px solid var(--shadow);
+    border: 1px solid var(--bordercolor);
     transition: all 0.3s ease-in-out;
 
     &.active,
@@ -220,7 +220,7 @@
   &.cancel-button {
     color: var(--text);
     background-color: var(--onbackground);
-    border: 1px solid var(--shadow);
+    border: 1px solid var(--bordercolor);
     transition: all 0.3s ease-in-out;
 
     &.active,
@@ -237,7 +237,7 @@
   &.marketplace-button {
     color: var(--text);
     background-color: var(--onbackground);
-    border: 1px solid var(--shadow);
+    border: 1px solid var(--bordercolor);
     transition: all 0.3s ease-in-out;
 
     &.active,
@@ -254,7 +254,7 @@
   &.admin-button {
     color: var(--text);
     background-color: var(--onbackground);
-    border: 1px solid var(--shadow);
+    border: 1px solid var(--bordercolor);
     transition: all 0.3s ease-in-out;
 
     &.active,
@@ -271,7 +271,7 @@
   &.services-button {
     color: var(--text);
     background-color: var(--onbackground);
-    border: 1px solid var(--shadow);
+    border: 1px solid var(--bordercolor);
     transition: all 0.3s ease-in-out;
 
     &.active,
@@ -321,7 +321,7 @@
   width: 100%;
   background-color: var(--onbackground);
   color: var(--text);
-  border: 1px solid var(--shadow);
+  border: 1px solid var(--bordercolor);
   border-radius: var(--border-radius);
   transform: translateY(-3px);
   box-shadow: -3px 4px 0 0 var(--lighttext);
@@ -336,7 +336,7 @@
     padding: 0.7em 1em;
     background-color: var(--onbackground);
     color: var(--text);
-    border: 1px solid var(--shadow);
+    border: 1px solid var(--bordercolor);
     border-radius: var(--border-radius);
     position: relative;
     transform: translateY(0);
@@ -360,7 +360,7 @@
     &.marketplace-button {
       color: var(--text);
       background-color: var(--onbackground);
-      border: 1px solid var(--shadow);
+      border: 1px solid var(--bordercolor);
       transition: all 0.3s ease-in-out;
 
       &.active,
@@ -384,7 +384,7 @@
     transition: all 0.3s;
     background-color: var(--onbackground);
     color: var(--text);
-    border: 1px solid var(--shadow);
+    border: 1px solid var(--bordercolor);
     border-radius: var(--border-hard);
     position: relative;
     transform: translateY(0);
@@ -479,7 +479,7 @@
   padding: 0;
   width: 100%;
   background-color: var(--onbackground);
-  border: 1px solid var(--shadow);
+  border: 1px solid var(--bordercolor);
   border-radius: var(--border-radius);
   transition: all 0.3s ease-in-out;
   overflow: hidden;
@@ -609,7 +609,7 @@
 .no-posts-found {
   width: 100%;
   height: 400px;
-  border: 1px solid var(--shadow);
+  border: 1px solid var(--bordercolor);
   padding: 20px;
   background-color: var(--onbackground);
   border-radius: 10px;
@@ -655,7 +655,7 @@
   padding: 10px;
   background-color: var(--onbackground);
   border-radius: 10px;
-  border: 1px solid var(--shadow);
+  border: 1px solid var(--bordercolor);
 
   transform: translateY(-4px);
   box-shadow: 0 0px 0 0 var(--lighttext);
@@ -755,7 +755,7 @@
   border-radius: var(--border-radius);
   transform: translateY(-4px);
   box-shadow: -3px 5px 0 0 var(--shadow);
-  border: 1px solid var(--shadow);
+  border: 1px solid var(--bordercolor);
 
   &.admin-box {
     height: auto;
@@ -799,7 +799,7 @@
   transition: all 0.3s ease-in-out;
   background-color: var(--onbackground);
   color: var(--text);
-  border: 1px solid var(--shadow);
+  border: 1px solid var(--bordercolor);
   border-radius: var(--border-radius);
 
   position: relative;
@@ -1104,7 +1104,7 @@
   width: 100%;
   background-color: var(--onbackground);
   color: var(--text);
-  border: 1px solid var(--shadow);
+  border: 1px solid var(--bordercolor);
   border-radius: var(--border-radius);
   transform: translateY(-4px);
   box-shadow: 0 5px 0 0 var(--lighttext);
@@ -1667,7 +1667,7 @@ app-navbar {
     font-size: 12px;
     color: var(--text);
     background-color: var(--onbackground);
-    border: 1px solid var(--shadow);
+    border: 1px solid var(--bordercolor);
     border-radius: var(--border-hard);
     transition: all 0.3s ease-in-out;
 
@@ -1687,7 +1687,7 @@ app-navbar {
     font-size: 12px;
     color: var(--text);
     background-color: var(--onbackground);
-    border: 1px solid var(--shadow);
+    border: 1px solid var(--bordercolor);
     border-radius: var(--border-hard);
     transition: all 0.3s ease-in-out;
 
@@ -1707,7 +1707,7 @@ app-navbar {
     font-size: 12px;
     color: var(--text);
     background-color: var(--onbackground);
-    border: 1px solid var(--shadow);
+    border: 1px solid var(--bordercolor);
     border-radius: var(--border-hard);
     transition: all 0.3s ease-in-out;
 
@@ -1728,7 +1728,7 @@ app-navbar {
 
     color: var(--text);
     background-color: var(--onbackground);
-    border: 1px solid var(--shadow);
+    border: 1px solid var(--bordercolor);
     border-radius: var(--border-hard) 0 0 var(--border-hard);
     transition: all 0.3s ease-in-out;
     border-right: transparent;
@@ -1751,7 +1751,7 @@ app-navbar {
     font-size: 12px;
     color: var(--text);
     background-color: var(--onbackground);
-    border: 1px solid var(--shadow);
+    border: 1px solid var(--bordercolor);
 
     &.pure {
       color: var(--lila);
@@ -1823,7 +1823,7 @@ app-navbar {
       color: var(--profession);
     }
     &:disabled {
-      border: 1px solid var(--shadow);
+      border: 1px solid var(--bordercolor);
       color: var(--lighttext);
       box-shadow: 0 0 0 0 var(--profession);
       transform: translateY(0);
@@ -1841,7 +1841,7 @@ app-navbar {
   }
 
   &:disabled {
-    border: 1px solid var(--shadow);
+    border: 1px solid var(--bordercolor);
     color: var(--lighttext);
     box-shadow: 0 0 0 0 var(--primary);
     transform: translateY(0);
@@ -2273,7 +2273,7 @@ h6 {
   width: 100%;
   background-color: var(--onbackground);
   color: var(--text);
-  border: 1px solid var(--shadow);
+  border: 1px solid var(--bordercolor);
   border-radius: var(--border-radius);
   transition: all 0.3s ease-in-out;
   position: relative;
@@ -2305,7 +2305,7 @@ h6 {
   width: 100%;
   background-color: var(--onbackground);
   color: var(--text);
-  border: 1px solid var(--shadow);
+  border: 1px solid var(--bordercolor);
   border-radius: var(--border-radius);
   transition: all 0.3s ease-in-out;
   transform: translateY(-4px);
@@ -2471,7 +2471,7 @@ h6 {
     background-color: var(--onbackground);
     width: 100%;
     border-radius: 0;
-    border: 1px solid var(--shadow);
+    border: 1px solid var(--bordercolor);
     overflow: hidden;
     float: left;
 
@@ -2702,7 +2702,7 @@ input[type='time'] {
         width: 16px;
         border-radius: var(--border-hard);
         margin-right: 12px;
-        border: 1px solid var(--shadow);
+        border: 1px solid var(--bordercolor);
         transition: all 0.3s ease-in-out;
       }
 
