--- a/frontend/src/app/shared/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/components/sidebar/sidebar.component.html
@@ -39,7 +39,7 @@
     <!-- Non-Worker Sidebar -->
     <ng-template #notWorker>
       <div class="left-box">
-        <div class="f-c-c-c g-1 first">
+        <div class="f-c-c-c g-07 first">
           <div *ngIf="userRole === Roles.ADMINISTRATOR">
             <a
               [routerLink]="['/admin/announcement/new']"
@@ -81,7 +81,7 @@
             <span>{{ 'SIDEBAR.CHANNELS.COMPLAINTS' | translate }}</span>
           </a>
         </div>
-        <div class="f-c-c-c second">
+        <div class="f-c-c-c g-07 second">
           <div class="divider"></div>
           <a
             id="marketplaceButton"
