chore: docker compose ftw

--- a/frontend/src/app/features/marketplace/marketplace-product-preview/marketplace-product-preview.component.html
+++ b/frontend/src/app/features/marketplace/marketplace-product-preview/marketplace-product-preview.component.html
@@ -18,7 +18,8 @@
                 </div>
 
                 <div class="used-tag" [ngClass]="product.used ? 'used' : 'new'">
-                    {{ product.used ? ('MARKETPLACE-PRODUCT-PREVIEW.USED' | translate) : ('MARKETPLACE-PRODUCT-PREVIEW.NEW' | translate) }}
+                    {{ product.used ? ('MARKETPLACE-PRODUCT-PREVIEW.USED' | translate) :
+                    ('MARKETPLACE-PRODUCT-PREVIEW.NEW' | translate) }}
                 </div>
             </div>
 
