--- a/frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/frontend/src/app/shared/components/navbar/navbar.component.html
@@ -89,9 +89,9 @@
             </label>
           </div>
           <!-- Language Toggle Button -->
-          <a (click)="onLanguageToggle()" class="language-toggle">
+          <!-- <a (click)="onLanguageToggle()" class="language-toggle">
             {{ currentLanguage === englishLanguageLink ? "ES" : "EN " }}
-          </a>
+          </a> -->
         </div>
       </div>
     </div>
