--- a/frontend/src/assets/styles/commons.css
+++ b/frontend/src/assets/styles/commons.css
@@ -63,7 +63,7 @@ body {
   --secondary: #d8d8c5;
   --error: #de6f6f;
   --scrollbarthumb: #004f2d;
-  --bordercolor: #dadad0;
+  --bordercolor: #d9d9cf;
   --always-background: #faf6e8;
   --on-onbackground: rgb(238, 236, 231);
   --green: #328d3d;
