--- a/frontend/src/app/features/admin/admin-create-announcement-page/admin-create-announcement-page.component.html
+++ b/frontend/src/app/features/admin/admin-create-announcement-page/admin-create-announcement-page.component.html
@@ -17,12 +17,11 @@
           placeholder="Subject"
           type="text"
         />
-        <div
-          class="form-row form-error"
-          *ngIf="subjectControl?.invalid && subjectControl?.touched"
-        >
-          <p class="error">{{"ADMIN-CREATE-ANNOUNCEMENT-PAGE.SUBJECT_IS_REQUIRED" | translate }}</p>
-        </div>
+        <app-form-error
+          class="w-100"
+          [control]="subjectControl"
+          [centered]="false"
+        ></app-form-error>
       </div>
 
       <!-- Message -->
@@ -33,19 +32,20 @@
           rows="5"
           placeholder="Message"
         ></textarea>
-        <div
-          class="form-row form-error"
-          *ngIf="messageControl?.invalid && messageControl?.touched"
-        >
-          <p class="error">{{ "ADMIN-CREATE-ANNOUNCEMENT-PAGE.MESSAGE_IS_REQUIRED" | translate }}</p>
-        </div>
+        <app-form-error
+          class="w-100"
+          [control]="messageControl"
+          [centered]="false"
+        ></app-form-error>
       </div>
 
       <!-- File input -->
       <div class="col p-0">
         <label for="images" class="drop-container" id="dropcontainer">
-          <span class="drop-title">{{ "ADMIN-CREATE-ANNOUNCEMENT-PAGE.DROP_FILES" | translate }}</span>
-          {{ "ADMIN-CREATE-ANNOUNCEMENT-PAGE.OR" | translate }}
+          <span class="drop-title">{{
+            'ADMIN-CREATE-ANNOUNCEMENT-PAGE.DROP_FILES' | translate
+          }}</span>
+          {{ 'ADMIN-CREATE-ANNOUNCEMENT-PAGE.OR' | translate }}
           <input
             type="file"
             id="images"
@@ -53,8 +53,11 @@
             (change)="onFileChange($event)"
           />
         </label>
-        <!-- Error message if any -->
-        <p class="error" *ngIf="fileUploadError">{{ fileUploadError }}</p>
+        <app-form-error
+          class="w-100"
+          [control]="imageFileControl"
+          [centered]="false"
+        ></app-form-error>
       </div>
 
       <!-- Image preview -->
@@ -78,7 +81,10 @@
         -->
       <!-- Tags Section -->
       <div class="col p-0">
-        <label class="mb-2">{{ "ADMIN-CREATE-ANNOUNCEMENT-PAGE.SELECT_FROM_THE_AVAILABLE_TAGS" | translate }}</label>
+        <label class="mb-2">{{
+          'ADMIN-CREATE-ANNOUNCEMENT-PAGE.SELECT_FROM_THE_AVAILABLE_TAGS'
+            | translate
+        }}</label>
 
         <!-- Display selected tags -->
         <div *ngIf="appliedTags.length > 0" class="tags-row tags w-100 mb-2">
@@ -100,15 +106,11 @@
         </div>
 
         <!-- Error message -->
-        <div
-          class="form-row form-error"
-          *ngIf="
-            announcementForm.get('tags')?.invalid &&
-            announcementForm.get('tags')?.touched
-          "
-        >
-          <p class="error">{{ "ADMIN-CREATE-ANNOUNCEMENT-PAGE.AT_LEAST_ONE_TAG_MUST_BE_SELECTED" | translate }}</p>
-        </div>
+        <app-form-error
+          class="w-100"
+          [control]="announcementForm.get('tags')"
+          [centered]="false"
+        ></app-form-error>
       </div>
     </div>
 
@@ -119,7 +121,7 @@
         class="cool-button cool-small on-bg w-25 font-weight-bolder"
         style="height: 40px"
       >
-      {{ "ADMIN-CREATE-ANNOUNCEMENT-PAGE.POST" | translate }}
+        {{ 'ADMIN-CREATE-ANNOUNCEMENT-PAGE.POST' | translate }}
       </button>
     </div>
   </form>
